test/good/generics/func10.px

func call<T>(f: ()->T): T def
    x: T
    print x
    return f()

f: ()->String = lambda: "qwerty"
print call(f)

print call(lambda: 4.5)
